--- a/apps.json
+++ b/apps.json
@@ -25,5 +25,14 @@
     "category": "Financial",
     "screenshot": "auto",
     "author": "Haim Cohen"
+  },
+    {
+    "id": "1004",
+    "name": "Early Retirement Calculator",
+    "url": "https://app---e7110df6.base44.app/",
+    "description": "Plan Your Financial Future – Starting Today",
+    "category": "Financial",
+    "screenshot": "auto",
+    "author": "Haim Cohen"
   }
 ]
