--- a/apps.json
+++ b/apps.json
@@ -11,7 +11,7 @@
   {
     "id": "1002",
     "name": "chmod Master: Terminal Quest",
-    "url": "https://promptfolio.ai",
+    "url": "https://jolly-fenglisu-00c6b2.netlify.app/",
     "description": "Test your chmod skills with a terminal Quest.",
     "category": "Linux",
     "screenshot": "auto",
