--- a/apps.json
+++ b/apps.json
@@ -34,5 +34,14 @@
     "category": "Financial",
     "screenshot": "auto",
     "author": "Haim Cohen"
+  },
+      {
+    "id": "1005",
+    "name": "KeyFlow",
+    "url": "https://app---e7110df6.base44.app/",
+    "description": "An all-in-one app for managing your home purchase journey.",
+    "category": "Financial",
+    "screenshot": "auto",
+    "author": "Haim Cohen"
   }
 ]
