--- a/apps.json
+++ b/apps.json
@@ -38,7 +38,7 @@
       {
     "id": "1005",
     "name": "KeyFlow",
-    "url": "https://app---e7110df6.base44.app/",
+    "url": "https://app--key-flow-a2c0d420.base44.app/",
     "description": "An all-in-one app for managing your home purchase journey.",
     "category": "Financial",
     "screenshot": "auto",
