--- a/apps.json
+++ b/apps.json
@@ -14,7 +14,7 @@
     "url": "https://jolly-fenglisu-00c6b2.netlify.app/",
     "description": "Test your chmod skills with a terminal Quest.",
     "category": "Linux",
-    "screenshot": "https://picsum.photos/200/300",
+    "screenshot": "https://raw.githubusercontent.com/sk3pp3r/spincore-board/main/screenshots/chmod.png",
     "author": "Haim Cohen"
   },
   {
