--- a/apps.json
+++ b/apps.json
@@ -23,7 +23,7 @@
     "url": "https://simple-financial-tools.lovable.app/",
     "description": "Financial calculators for daily used",
     "category": "Financial",
-    "screenshot": "https://picsum.photos/200/300",
+    "screenshot": "https://raw.githubusercontent.com/sk3pp3r/spincore-board/main/screenshots/finance_calcs.png",
     "author": "Haim Cohen"
   },
     {
