--- a/apps.json
+++ b/apps.json
@@ -45,12 +45,21 @@
     "author": "Haim Cohen"
   },
     {
-      "id": "1006",
+    "id": "1006",
     "name": "Job CRM",
     "url": "https://v0-hebrew-job-crm-system.vercel.app//",
     "description": "Job opportunity management CRM.",
     "category": "Career",
     "screenshot": "https://raw.githubusercontent.com/sk3pp3r/spincore-board/main/screenshots/jobs_crm.png",
     "author": "Haim Cohen"
+    },
+    {
+     "id": "1007",
+     "name": "LinkPro",
+     "url": "https://linkedin-pro-guide-israel.lovable.app/",
+     "description": "LinkedIn Guidance",
+     "category":"Career",
+     "author":"Haim Cohen",
+     "screenshot": "https://raw.githubusercontent.com/sk3pp3r/spincore-board/main/screenshots/linkpro.png"
     }
 ]
