add: mortgage-simulator

--- a/apps.json
+++ b/apps.json
@@ -63,6 +63,15 @@
      "screenshot": "https://raw.githubusercontent.com/sk3pp3r/spincore-board/main/screenshots/linkpro.png"
     },
     {
+      "id": "1009",
+      "name": "Mortgage Simulator",
+      "url": "https://v0-mortgage-simulator.vercel.app/",
+      "description": "LinkedIn Guidance",
+      "category":"Financial",
+      "author":"Haim Cohen",
+      "screenshot": "https://raw.githubusercontent.com/sk3pp3r/spincore-board/main/screenshots/mortgage-simulator.png"
+     },
+    {
       "id": "1008",
       "name": "Mystic Hand Whispers",
       "url": "https://mystic-hand-whispers.lovable.app/",
